--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
-    "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0"
+    "react-native-screens": "^3.19.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
