--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "@types/react-native-vector-icons": "^6.4.13",
     "axios": "^1.2.5",
     "jetifier": "^2.0.0",
     "moment": "^2.29.4",
